# apex

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 001_add_storage_tables.py  001_initial_migration.py  002_add_users.py
config/bundles/qwen_rapid_aio/260103-18/: workflow.json
docs/: User_Management.md
scripts/: init-db.sql
src/: __init__.py  main.py
src/api/: __init__.py  app.py  dependencies.py
src/api/routes/: __init__.py  auth.py  generation.py  storage.py  user.py
src/api/schemas/: __init__.py  auth.py  generation.py  user.py
src/api/security/: __init__.py  guards.py  jwt.py  password.py
src/api/services/: __init__.py  auth.py  comfyui_client.py  job_manager.py  user.py  user_content.py  workflow_service.py
src/api/services/storage/: __init__.py  base.py  exceptions.py  r2.py  schemas.py
src/core/: __init__.py  config.py  enums.py
src/db/: __init__.py  repository.py  session.py
src/db/models/: __init__.py  storage.py  user.py
src/db/repositories/: __init__.py  user.py
tests/: conftest.py  test_auth_service.py  test_r2_storage.py  test_schemas.py  test_storage_schemas.py  test_workflow_service.py
