[project]
name = "apex"
version = "0.3.0"
description = "Apex REST API service for ComfyUI generation workflows"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "litestar>=2.19.0",
    "uvicorn[standard]>=0.30.0",
    "msgspec>=0.20.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.45",
    "asyncpg>=0.31.0",
    "alembic>=1.18.1",
    
    # Storage
    "aioboto3>=15.5.0",
    "types-aiobotocore[s3]>=3.1.0",
    "boto3-stubs[s3]>=1.42.30",

    # Utilities
    "httpx>=0.28.1",
    "python-multipart>=0.0.21",
    "rich>=14.2.0",

    # Authentication
    "argon2-cffi>=25.1.0",
    "PyJWT>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.14.13",
    "moto[s3]>=5.0.0",  # For mocking S3/R2 in tests
]

[project.scripts]
apex = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = [
    "aioboto3.*",
    "boto3.*",
    "botocore.*",
    "moto.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
